--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js --exec babel-node --presets babel-preset-env"
+    "dev": "nodemon src/index.js --exec babel-node --presets babel-preset-env",
+    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
+    "start": "npm run build && node dist/src/index.js"
   },
   "keywords": [
     "dsc",
@@ -16,13 +18,16 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-validator": "^6.6.0"
+    "express-validator": "^6.6.0",
+    "helmet": "^3.23.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
-    "nodemon": "^2.0.4"
+    "babel-preset-es2015": "^6.24.1",
+    "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2"
   }
 }
